[package]
name = "sp-ark-ed-on-bls12-381-bandersnatch"
version = "0.4.1-beta"
authors = ["Parity Technologies <admin@parity.io>", "Achim Schneider <achim@parity.io>", "Davide Galassi <davxy@datawok.net>" ]
description = "Extensions for Bandersnatch: a curve defined over the scalar field of the BLS12-381 curve"
repository = "https://github.com/paritytech/arkworks-ext"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
sp-ark-models = { path = "../../models", default-features = false }
ark-scale = { version = "0.0.11", features = ["hazmat"], default-features = false }
ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }

[dev-dependencies]
# ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-algebra-test-templates = { version = "0.4.2", default-features = false }
test-utils =  { path = "../../test-utils",  default-features = false }

[features]
default = ["std"]
std = [
  "ark-ff/std",
  "ark-std/std",
  "ark-r1cs-std/std",
  "sp-ark-models/std", 
  "ark-scale/std",
  "ark-ed-on-bls12-381-bandersnatch/std",
  "test-utils/std", 
]
r1cs = [
  "ark-r1cs-std",
  "ark-ed-on-bls12-381-bandersnatch/r1cs"
]
# SCALE encoding related features for most of the arkworks types.
# Defaults to "compressed" and "validated".
scale-fast = [
  "scale-no-compress",
  "scale-no-validate",
]
scale-no-compress = [
  "test-utils/scale-no-compress",
]
scale-no-validate = [  
  "test-utils/scale-no-validate",
]
