[package]
name = "sp-ark-ed-on-bls12-381-bandersnatch"
description = "Extensions for Bandersnatch curve defined over the scalar field of the BLS12-381 curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
ark-ed-on-bls12-381-bandersnatch.workspace = true
ark-scale.workspace = true
sp-ark-models.workspace = true

[dev-dependencies]
ark-ec.workspace = true
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
test-utils.workspace = true

[features]
default = ["std"]
std = [
  "ark-ff/std",
  "ark-std/std",
  "ark-ed-on-bls12-381-bandersnatch/std",
  "sp-ark-models/std", 
  "ark-scale/std",
  "test-utils/std", 
]
r1cs = ["ark-ed-on-bls12-381-bandersnatch/r1cs"]
# SCALE encoding related features for most of the arkworks types.
# Defaults to "compressed" and "validated".
scale-fast = [
  "scale-no-compress",
  "scale-no-validate",
]
scale-no-compress = [
  "test-utils/scale-no-compress",
]
scale-no-validate = [  
  "test-utils/scale-no-validate",
]
