[package]
name = "ark-ed-on-bls12-381-bandersnatch-ext"
description = "Extensions for Bandersnatch curve defined over the scalar field of the BLS12-381 curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-ed-on-bls12-381-bandersnatch.workspace = true
ark-scale.workspace = true
ark-models-ext.workspace = true

[dev-dependencies]
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
test-utils.workspace = true

[features]
default = [ "std" ]
std = [
  "ark-algebra-test-templates/std",
  "ark-ec/std",
  "ark-ed-on-bls12-381-bandersnatch/std",
  "ark-ff/std",
  "ark-models-ext/std",
  "ark-scale/std",
  "ark-serialize/std",
  "ark-std/std",
  "test-utils/std",
]
r1cs = [ "ark-ed-on-bls12-381-bandersnatch/r1cs" ]
# SCALE encoding related features for most of the arkworks types.
# Defaults to "compressed" and "validated".
scale-fast = [
  "scale-no-compress",
  "scale-no-validate",
  "test-utils/scale-fast",
]
scale-no-compress = [ "test-utils/scale-no-compress" ]
scale-no-validate = [ "test-utils/scale-no-validate" ]
