[package]
name = "ark-secp256k1-ext"
description = "Extensions for the SECP256k1 elliptic curve famously used in bitcoin"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-secp256k1.workspace = true
ark-models-ext.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
ark-algebra-test-templates.workspace = true
test-utils.workspace = true

[features]
default = [ "std" ]
std = [
  "ark-secp256k1/std",
  "ark-ec/std",
  "ark-ff/std",
  "ark-models-ext/std",
  "ark-serialize/std",
  "ark-std/std",
]
parallel = [ "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel" ]
