[package]
name = "sp-ark-utils"
version = "0.4.0-alpha.1"
authors = ["Parity Technologies <admin@parity.io>", "Achim Schneider <achim@parity.io>" ]
repository = "https://github.com/paritytech/ark-substrate"
description = "A Twisted Edwards curve defined over the scalar field of the BLS12-381 curve, optimized for Substrate"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "substrate" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.4.0-alpha", default-features = false }
ark-serialize = { version = "0.4.0-alpha", default-features = false }

[features]
default = []
std = [ "ark-std/std", "ark-serialize/std" ]