[package]
name = "constraint-tests"
description = "A library for testing constraints for finite fields, elliptic curves, and pairings"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ark-std.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-models-ext.workspace = true

[features]
default = [ "std" ]
std = [ 
  "ark-std/std",
  "ark-serialize/std",  
  "ark-ff/std", 
  "ark-r1cs-std/std",
  "ark-models-ext/std"
]
